NXP-30128: cleanup/format